assets/css/style.css
/* ... */
.section-locations .locations > .location {
	position: relative;
	padding: var(--mobile-padding);
}
.section-locations.title-only .locations > .location:first-child {
	padding-top: 70px;
}
.section-locations .location .section-title {
	position: absolute;
	left: var(--mobile-padding);
	top: 23px;
	margin: 0;
}
.section-locations .location .image img {
	display: block;
	width: 100%;
}
.section-locations .location .title {
	margin: var(--mobile-padding) 0 0px;
}
.section-locations .location .description {
	margin-top: -15px;
}

/* Section: Brand Grid */
.section-with-title-body .title-body {
	padding: 80px var(--mobile-padding);
}
.section-brands .title-body {
	border-bottom: 1px solid var(--grid-lines);
}
.section-with-title-body .title-body .section-title {
	margin: 0 0 10px;
}
.section-with-title-body .title-body .body p:first-child {
	margin-top: 0;
}
.section-with-title-body .title-body .body p:last-child {
	margin-bottom: 0;
}

.section-brands .brands {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	padding: 40px 10px 10px;
}
.section-brands .brands .brand {
	flex: 0 1 50%;
	position: relative;
	padding: 10px;
	display: block;
}
.section-brands .brands a.brand {
	cursor: pointer;
	color: black;
}
.section-brands .brands a.brand:hover {
	color: black;
}
.section-brands .brands a.brand * {
	pointer-events: none;
}
.section-brands .brands .brand > .inner {
	position: relative;
}
.section-brands .brand .image {
	padding-top: 100%;
	background: no-repeat center center;
	background-size: cover;
}
.section-brands .brand .image img {
	display: none;
}
.section-brands .brand .text>.inner {
	position: relative;
	z-index: 1;
}
.section-brands .brand .text .name,
.section-brands .brand .text .description,
.section-brands .brand .text .cta {
	display: none;
}
.section-brands .logo svg {
	display: block;
}

@media(max-width: 567px) {
	.section-brands .brands .brand .logo {
		text-align: center;
		margin-top: var(--mobile-padding);
	}
	.section-brands .logo svg {
		margin: 0 auto;
	}
	.section-brands .logo-ouidad {
		height: 19px;
		width: 68px;
	}
	.section-brands .logo-wetbrush {
		height: 28px;
		width: 42px;
	}
	.section-brands .logo-goody {
		height: 32px;
		width: 63px;
	}
	.section-brands .logo-bioionic {
		height: 23px;
		width: 79px;
	}
	.section-brands .logo-solano {
		height: 16px;
		width: 71px;
	}
	.section-brands .logo-ace {
		height: 19px;
		width: 72px;
	}
}

/* Section: Quotes */
.section-quotes {
	background: #dedfea;
}
.section-quotes > .inner {
	position: relative;
	height: 100%;
}
.section-quotes .quote {
	position: absolute;
	width: 100%;
	height: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
}
.section-quotes .quote > .inner {
	max-width: 400px;
	width: 80%;
	margin: 0 auto;
}
.section-quotes .quote .name {
	display: none;
}
.section-quotes .logo svg {
	height: 35px;
	width: 100%;
	margin-top: 75px;
}
.section-quotes .logo .logo-ace {
	height: 23px;
}
.section-quotes .logo .logo-bioionic {
	height: 21px;
}
.section-quotes .logo .logo-epic {
	height: 30px;
}
.section-quotes .logo .logo-goody {
	height: 42px;
}
.section-quotes .logo .logo-ouidad {
	height: 25px;
}
.section-quotes .logo .logo-solano {
	height: 21px;
}
.section-quotes .logo .logo-wetbrush {
	height: 39px;
}
.section-quotes .quote .body {
	margin-bottom: 75px;
	font-weight: 300;
	font-size: 15px;
}
.section-quotes .quote .byline {
	white-space: nowrap;
}
.section-quotes .quote.hidden {
	opacity: 0;
}
.section-quotes .quote.has-transition {
	transition: 300ms linear opacity;
}

/* Section: Feature */
.section-feature > .inner {
	padding: 50px var(--mobile-padding);
}
.section-feature .image img {
	width: 100%;
	height: auto;
	display: block;
}
.section-feature .image .fill {
	display: none;
}
.section-feature .text .body :last-child {
	margin-bottom: 0;
}

/* Section: Job listing and Articles */
.section-jobs {
	padding-bottom: 80px;
}
.section-jobs .section-title,
.section-articles .section-title {
	margin: 0;
}
.section-jobs > .inner,
.section-articles > .inner {
	padding: var(--mobile-padding);
}
.section-jobs .empty,
.section-articles .empty {
	font-weight: normal;
	font-size: 16px;
	padding: 0 var(--mobile-padding);
	margin: 0;
}
.section-jobs .list {
	margin-top: -50px;
}
.section-jobs .list .hidden,
.section-articles .articles .hidden {
	display: none;
}
.section-jobs .list .group  {
	margin: 50px 0;
}
.section-jobs .list .group > .title {
	background:#dedfea;
	padding: 20px var(--mobile-padding) 15px;
	margin: 0;
	line-height: 1;
}
.section-jobs .list .jobs {
	padding: 10px var(--mobile-padding);
}
.section-jobs .list .jobs table {
	width: 100%;
	border-collapse: collapse;
}
.section-jobs .list .jobs table th {
	text-align: left;
	font-weight: normal;
	font-size: 12px;
}
.section-jobs .list .jobs table td {
	font-size: 16px;
	padding: 10px 0;
	border-bottom: 1px solid var(--grid-lines);
}
.section-jobs .list .jobs table .position {
	width: 50%;
}
.section-jobs .list .jobs table .location {
	width: 40%;
}
.section-jobs .list .jobs .link {
	text-align: right;
}
.section-jobs .list .jobs .link a {
	text-transform: uppercase;
	text-decoration: none;
}


/* Section: Articles */
.section-articles .articles {
	padding: 10px 10px 40px;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}
.section-articles .article {
	padding: 10px;
	display: flex;
	flex-direction: column;
	position: relative;
}

.section-articles .article .image {
	background: #999 no-repeat center center;
	background-size: cover;
	padding-top: 100%;
}
.section-articles .article img,
.section-articles .article picture {
	display: block;
	width: 100%;
}
.section-articles .featured .article .image {
	padding-top: 66.667%;
}
.section-articles .article .meta {
	font-size: 7px;
	color: var(--primary);
	display: none;
	margin: 0 0 8px;
}
.section-articles .article .image,
.section-articles .article img {
	margin-bottom: var(--mobile-padding);
}
/* ... */

